Bug 168303 - [26.2] Option button has a rectangular border around it
Summary: [26.2] Option button has a rectangular border around it
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2025-09-07 07:47 UTC by nobu
Modified: 2025-09-08 12:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (52.55 KB, image/png)
2025-09-07 07:48 UTC, nobu
Details
screenshot (144.64 KB, image/png)
2025-09-08 12:52 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-09-07 07:47:26 UTC
Description:
Option button has a rectangular border around it.

Steps to Reproduce:
1. Open new Calc.
2. Insert Option Button (radio button) on sheet.

Actual Results:
3. A square is drawn around the round button.

Expected Results:
3. Only round buttons will be drawn.


Reproducible: Always


User Profile Reset: No

Additional Info:

The same thing happens when you create a dialog, but it seems to draw correctly at runtime.

Not reproduced with
[2025-07-10]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7ef1c437f30b0869a5b9fa33809bac2c6665ace3
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Reproducible with
[2025-08-17]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 08b0b260f52483090d94a6d5bd0b053bb1b51c9e
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 1 nobu 2025-09-07 07:48:59 UTC
Created attachment 202709 [details]
Screenshot
Comment 2 Jussi Suominen 2025-09-07 09:08:54 UTC
Bibisected with bibisect repo win64-26.2. Source sha of the first bad commit: 81260259067e706dec84542efaf7c4fc807b9a36
Comment 3 Jussi Suominen 2025-09-07 09:13:28 UTC
I was unable to reproduce the bug in the following stable version:

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: fi-FI (fi_FI); UI: en-GB
Calc: CL threaded

I was also unable to reproduce the bug in the following master build:

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 04bd455e36b054001e08a0a3256d508a009ffef3
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: fi-FI (fi_FI); UI: en-GB
Calc: CL threaded
Comment 4 Jussi Suominen 2025-09-07 17:30:09 UTC
I downloaded and installed the latest master daily build. With this build I was able to reproduce the bug.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6d020f728b573c8c33929f8c494f9b748f576fe5
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: fi-FI (fi_FI); UI: en-GB
Calc: CL threaded
Comment 5 BogdanB 2025-09-07 19:15:12 UTC
Confirmed based on comment 4.
Comment 6 BogdanB 2025-09-07 19:31:42 UTC
Confirm also by me with a fresh build of master.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 96585f14bb34460db54267af724d4023fc520283
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2025-09-08 09:42:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a80777836b362c551347cfef3b9cc42b4b1c7388

tdf#168303 Option button has a rectangular border around it

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2025-09-08 12:52:55 UTC
Created attachment 202744 [details]
screenshot

Before and after. 
Solved. verified with
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 67ea1fc544a0651e8da78531cfa3525f72c434ef
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded