tdf#168303 Option button has a rectangular border around it

regression from
    commit 81260259067e706dec84542efaf7c4fc807b9a36
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Sat Aug 9 19:29:08 2025 +0200
    BitmapEx->Bitmap in various icons

The old BitmapEx::Replace methods had the odd behaviour that
they left the alpha layer alone, so we need to replicate that
in Bitmap::Replace

Change-Id: Ic304178fb9a45750a887bee2493546bc497eeb06
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190649
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>