vcl/source/bitmap/bitmappaint.cxx
@@ -987,7 +987,9 @@ bool Bitmap::Replace(const Color& rSearchColor, const Color& rReplaceColor, sal_
                     && nMaxG >= aCol.GetGreen() && nMinB <= aCol.GetBlue()
                     && nMaxB >= aCol.GetBlue())
                 {
-                    pAcc->SetPixelOnData(pScanline, nX, aReplace);
+                    BitmapColor aNewCol = aReplace;
+                    aNewCol.SetAlpha(aCol.GetAlpha());
+                    pAcc->SetPixelOnData(pScanline, nX, aNewCol);
                 }
             }
         }
@@ -1081,7 +1083,9 @@ bool Bitmap::Replace(const Color* pSearchColors, const Color* pReplaceColors, si
                         && aMinG[i] <= aCol.GetGreen() && aMaxG[i] >= aCol.GetGreen()
                         && aMinB[i] <= aCol.GetBlue() && aMaxB[i] >= aCol.GetBlue())
                     {
-                        pAcc->SetPixelOnData(pScanline, nX, aReplaces[i]);
+                        BitmapColor aNewCol = aReplaces[i];
+                        aNewCol.SetAlpha(aCol.GetAlpha());
+                        pAcc->SetPixelOnData(pScanline, nX, aNewCol);
                         break;
                     }
                 }
